Activitat 1: Inacessibilitat web - Millores - M09

--- a/CSS/estil_formulari.css
+++ b/CSS/estil_formulari.css
@@ -78,7 +78,7 @@ body {
 }
 
 .placeholder {
-  color: #65657b;
+  color: #ffffff;
   font-family: sans-serif;
   left: 20px;
   line-height: 14px;
@@ -95,7 +95,7 @@ body {
 }
 
 .input:not(:placeholder-shown) ~ .placeholder {
-  color: #808097;
+  color: #ffffff;
 }
 
 .input:focus ~ .placeholder {
@@ -403,4 +403,11 @@ form .text h3 a:hover{
   background-attachment: fixed;
   text-align: center;
   background-color: transparent;
+}
+
+.label_insertar {
+  color: #FFFFFF;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 10px;
 }
